--- a/roles/k8s_ha_cluster/tasks/ha_cluster_prepare_managers.yml
+++ b/roles/k8s_ha_cluster/tasks/ha_cluster_prepare_managers.yml
@@ -1,3 +1,6 @@
+- name: Синхронизация даты/времени с NTP сервером
+  shell: ntpdate 0.europe.pool.ntp.org
+
 - name: Копируем настройку демона keepalived
   template:
     src: templates/keepalived.conf.j2
