--- a/setup_k8s.yaml
+++ b/setup_k8s.yaml
@@ -1,11 +1,8 @@
 ---
-- name: Развёртывание ВМ из облачного образа
+- name: Подготовка ВМ к развёртыванию k8s
   hosts: localhost
   gather_facts: yes
   become: yes
-  vars_files:
-    - my_vars.yml
-
   tasks:
     - name: Подготовка окружения
       package:
@@ -14,19 +11,14 @@
           - python3-libvirt
         state: present
 
-    - name: Получаем параметры для создания ВМ
-      include_vars:
-        file: vm_names_debian.yml
-        name: vm_info
-
     - name: Подготовка шаблона для ВМ
       include_role:
-        name: debian_11_provision
+        name: vm_provision
         tasks_from: prepare_images_for_cluster.yml
 
     - name: Создание ВМ нод из шаблонного образа.
       include_role:
-        name: debian_11_provision
+        name: vm_provision
         tasks_from: create_nodes.yml
       vars:
         vm_name: "{{ item.name }}"
@@ -34,65 +26,71 @@
         vm_ram_mb: "{{ item.memory }}"
         ipaddr: "{{ item.ipaddr }}"
       with_items: "{{ vm_info.vm_names }}"
+      when: variant == 'ha-cluster' or (variant == 'all-in-one' and item.name == 'node1')
 
-- name: Проверка доступности ВМ
-  hosts: localhost
-  gather_facts: false
-  tasks:
     - name: Ожидание загрузки всех ВМ из списка
       wait_for:
         host: "{{ hostvars[item].ansible_host }}"
         port: 22
         timeout: 300
         state: started
-      with_items: "{{ groups['all'] | sort }}"
+      when: variant == 'ha-cluster' or item == 'node1'
+      with_items: "{{ groups['all'] }}"
+
+    - name: Создаем снимок host_provision
+      include_role:
+        name: vm_provision
+        tasks_from: create_snapshot.yml
+      vars:
+        vm_name: "{{ item.name }}"
+        snapshot_name: "host_provision"
+        snapshot_description: "Нода подготовлена к установке движка"
+      when: variant == 'ha-cluster' or item.name == 'node1'
+      with_items: "{{ vm_info.vm_names }}"
+
 
 - name: Установка движка контейнеризации [cri-o, container-d, docker]
   hosts: all
   gather_facts: true
   become: true
   remote_user: root
-  vars_files:
-    - my_vars.yml
   tasks:
     - name: Синхронизация даты/времени с NTP сервером
       shell: ntpdate 0.europe.pool.ntp.org
 
     - name: Установка cri-o
       include_role:
-        name: debian_11_provision
+        name: driver_provision
         tasks_from: install_crio.yml
       when: engine == "cri-o"
 
     - name: Установка container-d
       include_role:
-        name: debian_11_provision
+        name: driver_provision
         tasks_from: install_container_d.yml
       when: engine == "container-d"
 
     - name: Установка docker cri
       include_role:
-        name: debian_11_provision
+        name: driver_provision
         tasks_from: install_docker_cri.yml
       when: engine == "docker"
 
-- name: Создаем снапшоты
+- name: Создаем снапшот driver_provision
   hosts: localhost
-  gather_facts: yes
   become: yes
   tasks:
-    - name: Получаем данныые
-      include_vars:
-        file: vm_names_debian.yml
-        name: vm_info
-
     - name: Создаем снимки
       include_role:
-        name: debian_11_provision
+        name: vm_provision
         tasks_from: create_snapshot.yml
       vars:
         vm_name: "{{ item.name }}"
+        snapshot_name: "driver_provision"
+        snapshot_description: "Движок установлен, нода подготовлена к инициализации k8s"
+      when: variant == 'ha-cluster' or item.name == 'node1'
       with_items: "{{ vm_info.vm_names }}"
+
 
 - name: Настройка kubernetes [all-in-one либо ha-cluster]
   hosts: all
@@ -102,22 +100,19 @@
   tasks:
     - name: Установка all-in-one
       include_role:
-        name: debian_11_provision
+        name: k8s_all_in_one
         tasks_from: all_in_one.yml
       when: variant == "all-in-one" and inventory_hostname == 'node1'
 
     - name: Подготовка нод для ha-cluster
       include_role:
-        name: debian_11_provision
+        name: k8s_ha_cluster
         tasks_from: ha_cluster_prepare_managers.yml
       when: variant == "ha-cluster"
 
-    - name: Синхронизация даты/времени с NTP сервером
-      shell: ntpdate 0.europe.pool.ntp.org
-
     - name: Установка первой ноды
       include_role:
-        name: debian_11_provision
+        name: k8s_ha_cluster
         tasks_from: ha_cluster_first_node.yml
       when: variant == "ha-cluster" and inventory_hostname == 'node1' and inventory_hostname in groups['management']
       register: first_node_result
@@ -134,7 +129,7 @@
         msg: |
           control_plane_join_command: {{ control_plane_join_command }}
           worker_join_command: {{ worker_join_command }}
-      when: variant == "ha-cluster"
+      when: variant == "ha-cluster" and inventory_hostname == 'node1'
 
     - name: Использование команды control_plane_join_command
       block:
@@ -169,7 +164,7 @@
           delay: 30
           when: engine in ['container-d', 'cri-o']
 
-        - name: Подключение рабочих нод нод для docker
+        - name: Подключение рабочих нод для docker
           ansible.builtin.shell:
             cmd: "{{ worker_join_command }} --cri-socket unix:///var/run/cri-dockerd.sock"
           until: result.rc == 0
