--- a/my_vars.yml
+++ b/my_vars.yml
@@ -1,8 +1,8 @@
-variant: all-in-one #[all-in-one, ha-cluster]
+variant: ha-cluster #[all-in-one, ha-cluster]
 engine: cri-o #[container-d, cri-o, docker]
 libvirt_pool_dir: "/home/alex/myStorage/storage_for_VMs/"
 libvirt_pool_images: "/home/alex/myStorage/iso_images/"
-vm_net: vmnet
+vm_net: k8s_net
 ssh_key: "/home/alex/.ssh/id_rsa.pub"
 ansible_ssh_common_args: "-o StrictHostKeyChecking=no"
 version: "1.26"
